Fixed issues with PHP 5.4+ Fixed issue with selecting theme file types not working Fixed issue with double scrollbar Fixed issue with error message appearing when trying to save a post/page
git-svn-id: https://plugins.svn.wordpress.org/wp-editor/trunk@753644 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/extensions/codemirror/codemirror.css
+++ b/extensions/codemirror/codemirror.css
@@ -14,8 +14,8 @@
 .CodeMirror-scrollbar {
   position: absolute;
   right: 0; top: 0;
-  overflow-x: hidden;
-  overflow-y: scroll;
+  overflow: hidden;
+  /*overflow-y: scroll;*/
   z-index: 5;
 }
 .CodeMirror-scrollbar-inner {
